src/components/ticket/review-page/reviewPage.css
input[type="date"],
input[type="time"] {
    -webkit-appearance: none;
    appearance: none;
}

.review-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

.ticket-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    width: 100%;
}

.ticket-number {
    align-self: center;
    margin-bottom: 2rem;
    font-size: 1.5rem;
    font-family: sans-serif;
    text-shadow: 0 4px 12px rgba(228, 228, 207, 0.25);
}

.ticket-box {
    display: flex;
    position: relative;
    height: 65vh;
    /* margin-left: 10%; */
}

.ticket-image {
    object-fit: contain;
    width: 100%;
}

.ticket-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
}

input.review-input {
    text-align: center;
    color: black;
    font-weight: bold;
    background-color: rgb(228, 228, 207);
    opacity: 100%;
    padding: 0.1rem;
    box-shadow: 0 0 3px rgb(22, 129, 10);
    pointer-events: all;

    height: 1rem;
    font-size: 0.8rem;
}

@keyframes pulsate {
    0% {
        box-shadow: 0 0 6px rgba(0, 0, 0, 0.7);
    }
    50% {
        box-shadow: 0 0 9px rgb(246, 166, 166);
    }
    100% {
        box-shadow: 0 0 6px rgba(0, 0, 0, 0.7);
    }
}

.review-input.focused.unconfirmed {
    animation: pulsate 1s ease-in-out infinite;
    z-index: 100;
    cursor: pointer;
    pointer-events: all;
}

.review-input.unconfirmed {
    box-shadow: 0 0 3px rgb(210, 25, 25);
    pointer-events: none;
}

#finalize-button {
    background-color: var(--primary-color);
    color: white;
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.2rem;
    box-shadow: 0 0 9px rgb(246, 166, 166);
    animation: pulsate 1.2s ease-in-out infinite;
    margin-top: 5rem;
    min-width: 13rem;
    white-space: nowrap;
}

.dots-anim {
    display: inline-block;
    width: 1.2em;
    text-align: left;
}

.dots-anim::after {
    content: ".";
    animation: dots 1.2s steps(1) infinite;
}

@keyframes dots {
    0%   { content: "."; }
    33%  { content: ".."; }
    66%  { content: "..."; }
}

#finalize-button:disabled {
    color: rgb(0, 0, 0);
    background-color: gray;
    animation: none;
    box-shadow: none;
}

@media (min-width: 600px) and (max-width: 900px) {
    .review-wrapper {
        height: 95vh;
        max-width: 100vw;
        overflow: hidden;

        button {
            margin-top: 3.5rem;
        }
    }

    .ticket-wrapper {
        position: relative;
    }

    .ticket-box {
        max-height: 70vh;
    }
}

@media (max-width: 600px) {
    .review-wrapper {
        gap: 10vw;
    }

    .ticket-wrapper {
        justify-self: flex-start;
    }

    .ticket-number {
        margin: 2rem;
    }

    .ticket-box {
        max-height: 70vh;
        max-width: 60%;
    }

    #finalize-button {
        margin-top: 0;
    }
}

